Harden round presence WebSocket feature
Add rate limits, connection caps, idle sweeps, and metrics on the backend.
Bind WS tickets to scope keys, expose uniquePlayerCount in snapshots, and
lift the frontend socket into a day-scoped layout provider with persistent
reconnect and a reconnecting UI state.

Co-authored-by: LucaNerlich <LucaNerlich@users.noreply.github.com>